--- a/css/app.css
+++ b/css/app.css
@@ -44,3 +44,101 @@ header.navbar-container .nav-list li:hover a {
     background-color: #425c77;
     color: white;
 }
+main {
+    flex: 1;
+    width: 100%;
+    max-width: 1200px;
+    margin-inline: auto;
+    padding: 2rem 4rem;
+    display: flex;
+    align-items: center;
+}
+main .content {
+    flex: 1;
+    display: flex;
+    align-items: center;    
+}
+main .content .content-description {
+    flex: 1 1;
+}
+main .content .content-description .title {
+    margin-block: 1rem;
+    font-size: 3.5rem;
+}
+main .content .content-description p {
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+}
+main .content .content-description button {
+    padding: 0.8rem 2.5rem;
+    border: 3px solid transparent;
+    border-radius: 999px;
+    margin-block-start: 1rem;
+    background-color: #2d3e50;
+    font-family: 'Quicksand', sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+    transition: all 0.15s ease-in;
+}
+main .content .content-description button:hover {
+    border: 3px solid #2d3e50;
+    background-color: transparent;
+    color: #2d3e50;
+}
+main .content .content-image {
+    flex: 1;
+    display: flex;
+}
+main .content .content-image img {
+    width: 300px;
+    min-width: 250px;
+    margin: auto;
+}
+main aside {
+    position: fixed;
+    inset-block: 0;
+    inset-inline-end: 0;
+}
+main aside .social-media {
+    height: 100%;
+    display: flex;
+}
+main aside .social-media ul {
+    padding: 1.5rem 1rem;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    margin: auto;
+    background-color: #2d3e50;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+main aside .social-media li {
+    list-style-type: none;
+}
+main aside .social-media ul {
+    padding: 1.5rem 1rem;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    margin: auto;
+    background-color: #2d3e50;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+main aside .social-media li {
+    list-style-type: none;
+}
+main aside .social-media li a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: white;
+    transition: all 0.1s ease-in-out;
+}
